# OnToma

./: .gitignore  .pylintrc  .travis.yml  CHANGES  LICENSE  MANIFEST.in  Pipfile  README.md  VERSION  bumpversion.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test
.circleci/: config.yml
.github/workflows/: publish-pypi.yml
benchmark/: collate.py  sample.sh
docs/: conf.py  development.rst  index.rst  ols.rst  ontoma.rst  oxo.rst  usage.rst  zooma.rst
docs/superpowers/specs/: 2026-06-08-combination-trade-names-design.md
ontoma/: EFO_Handler.py  __init__.py  cli.py  constants.py  core.py  downloaders.py  efo_handler.py  fromge.py  helpers.py  interface.py  ols.py  ontology.py  owl.py  oxo.py  query.py  utils.py  zooma.py
src/ontoma/: __init__.py  nlp_pipeline.py  ontoma.py
src/ontoma/common/: __init__.py  schemas.py  utils.py
src/ontoma/dataset/: __init__.py  dataset.py  normalised_entity_lut.py  raw_entity_lut.py  ready_entity_lut.py
src/ontoma/datasource/: __init__.py  disease.py  disease_curation.py  drug.py  target.py
src/ontoma/ner/: README.md  __init__.py  _extractors.py  _pipelines.py  disease.py  drug.py
src/ontoma/schemas/: normalised_entity_lut.json  raw_entity_lut.json  ready_entity_lut.json
tests/: batch_input_test.txt  batch_input_test_long.txt  conftest.py  context.py  test_advanced.py  test_basic.py  test_cli.py  test_datasource_drug.py  test_ner_disease_extraction.py  test_ner_drug_extraction.py  test_ols.py  test_ontoma.py  test_oxo.py  test_phewascat.py  test_substring_mapping.py  util.py
